add 8hr imporved sleep

--- a/wave-extraction.ipynb
+++ b/wave-extraction.ipynb
@@ -2,27 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Bad key \"text.kerning_factor\" on line 4 in\n",
-      "/Users/thanatchonchongmankhong/anaconda3/envs/py36/lib/python3.6/site-packages/matplotlib/mpl-data/stylelib/_classic_test_patch.mplstyle.\n",
-      "You probably need to get an updated matplotlibrc file from\n",
-      "http://github.com/matplotlib/matplotlib/blob/master/matplotlibrc.template\n",
-      "or from the matplotlib source distribution\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pygame 1.9.6\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n",
       "OK !\n"
      ]
     }
@@ -39,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +117,7 @@
     }
    ],
    "source": [
-    "def wave_extraction(start_sec, end_sec, export_file, seconds):\n",
+    "def wave_extraction(start_sec, end_sec, export_file, seconds, volume_up = 1):\n",
     "    audio_file = \"data/Neorhythm - User Guide - How to use Test Tube.webm\"\n",
     "    audioclip = AudioFileClip(audio_file)\n",
     "\n",
@@ -145,7 +131,7 @@
     "#     seemless_enhance_mental_capacity.preview()\n",
     "    loop_no = int((seconds / seemless_enhance_mental_capacity.duration) + 1)\n",
     "    loop_clip = [seemless_enhance_mental_capacity for each in range(loop_no)]\n",
-    "    full_clip = concatenate_audioclips(loop_clip)\n",
+    "    full_clip = concatenate_audioclips(loop_clip).volumex(volume_up)\n",
     "\n",
     "    full_clip.write_audiofile(export_file)\n",
     "    audioclip.close()\n",
@@ -155,27 +141,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MoviePy - Writing audio in data/temp.wav\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                   \r"
+      "                                                                  "
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "MoviePy - Writing audio in data/temp.wav\n",
       "MoviePy - Done.\n"
      ]
     },
@@ -183,21 +163,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "chunk:   6%|▌         | 38/681 [00:00<00:02, 320.92it/s, now=None]"
+      "chunk:   0%|          | 7/39722 [00:00<09:56, 66.61it/s, now=None]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MoviePy - Writing audio in data/enhance_mental_capacity.mp3\n"
+      "MoviePy - Writing audio in data/30min_enhance_mental_capacity.mp3\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                   "
+      "                                                                      "
      ]
     },
     {
@@ -206,8 +186,8 @@
      "text": [
       "MoviePy - Done.\n",
       "Export Completed !\n",
-      "CPU times: user 1.3 s, sys: 122 ms, total: 1.42 s\n",
-      "Wall time: 3.18 s\n"
+      "CPU times: user 10min 59s, sys: 22 s, total: 11min 21s\n",
+      "Wall time: 12min 22s\n"
      ]
     },
     {
@@ -220,93 +200,14 @@
    ],
    "source": [
     "#enhance_mental_capacity\n",
-    "%time wave_extraction(56.0, 62.5,\"data/enhance_mental_capacity.mp3\", 30)"
+    "%time wave_extraction(56.0, 62.5,\"data/30min_enhance_mental_capacity.mp3\", 1800)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "chunk:   0%|          | 0/120 [00:00<?, ?it/s, now=None]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MoviePy - Writing audio in data/temp.wav\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                  \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MoviePy - Done.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "chunk:   6%|▌         | 38/685 [00:00<00:02, 310.26it/s, now=None]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MoviePy - Writing audio in data/energy_and_vitality.mp3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                   \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MoviePy - Done.\n",
-      "Export Completed !\n",
-      "CPU times: user 1.06 s, sys: 119 ms, total: 1.18 s\n",
-      "Wall time: 3.07 s\n"
-     ]
-    }
-   ],
-   "source": [
-    "#energy_and_vitality\n",
-    "%time wave_extraction(66.4, 71.8,\"data/energy_and_vitality.mp3\", 30)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "chunk:   0%|          | 0/133 [00:00<?, ?it/s, now=None]"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -332,21 +233,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "chunk:   6%|▌         | 38/665 [00:00<00:02, 282.76it/s, now=None]"
+      "chunk:   0%|          | 10/39712 [00:00<07:15, 91.14it/s, now=None]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MoviePy - Writing audio in data/deep_relaxation.mp3\n"
+      "MoviePy - Writing audio in data/30min_energy_and_vitality.mp3\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                   \r"
+      "                                                                      "
      ]
     },
     {
@@ -355,19 +256,26 @@
      "text": [
       "MoviePy - Done.\n",
       "Export Completed !\n",
-      "CPU times: user 1.25 s, sys: 127 ms, total: 1.37 s\n",
-      "Wall time: 3.51 s\n"
+      "CPU times: user 9min 49s, sys: 25.4 s, total: 10min 15s\n",
+      "Wall time: 12min 44s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r"
      ]
     }
    ],
    "source": [
-    "#deep_relaxation\n",
-    "%time wave_extraction(76.5, 82.5,\"data/deep_relaxation.mp3\", 30)"
+    "#energy_and_vitality\n",
+    "%time wave_extraction(66.4, 71.8,\"data/30min_energy_and_vitality.mp3\", 1800)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -381,64 +289,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MoviePy - Writing audio in data/temp.wav\n",
-      "MoviePy - Done.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "chunk:   6%|▌         | 38/668 [00:00<00:02, 260.86it/s, now=None]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MoviePy - Writing audio in data/improved_sleep.mp3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                   \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MoviePy - Done.\n",
-      "Export Completed !\n",
-      "CPU times: user 1.02 s, sys: 239 ms, total: 1.26 s\n",
-      "Wall time: 3.77 s\n"
-     ]
-    }
-   ],
-   "source": [
-    "#improved_sleep\n",
-    "%time wave_extraction(87, 92,\"data/improved_sleep.mp3\", 30)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "chunk:   0%|          | 0/71 [00:00<?, ?it/s, now=None]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "MoviePy - Writing audio in data/temp.wav\n"
      ]
     },
@@ -446,22 +296,35 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                               "
+      "\r"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MoviePy - Done.\n",
-      "MoviePy - Writing audio in data/pain_control.mp3\n"
+      "MoviePy - Done.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                   \r"
+      "chunk:   0%|          | 8/39703 [00:00<08:16, 79.95it/s, now=None]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MoviePy - Writing audio in data/30min_deep_relaxation.mp3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                      "
      ]
     },
     {
@@ -470,19 +333,46 @@
      "text": [
       "MoviePy - Done.\n",
       "Export Completed !\n",
-      "CPU times: user 1.07 s, sys: 139 ms, total: 1.21 s\n",
-      "Wall time: 3.21 s\n"
+      "CPU times: user 10min 9s, sys: 20.7 s, total: 10min 29s\n",
+      "Wall time: 11min 57s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r"
      ]
     }
    ],
    "source": [
-    "#pain_control\n",
-    "%time wave_extraction(97.5, 100.7,\"data/pain_control.mp3\", 30)"
+    "#deep_relaxation\n",
+    "%time wave_extraction(76.5, 82.5,\"data/30min_deep_relaxation.mp3\", 1800)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#improved_sleep\n",
+    "%time wave_extraction(87, 92,\"data/20min_improved_sleep.mp3\", 1200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pain_control\n",
+    "%time wave_extraction(97.5, 100.7,\"data/40min_pain_control.mp3\", 2400)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -504,22 +394,35 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "chunk:   0%|          | 0/672 [00:00<?, ?it/s, now=None]         "
+      "                                                                  "
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MoviePy - Done.\n",
-      "MoviePy - Writing audio in data/meditation_theta.mp3\n"
+      "MoviePy - Done.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                   \r"
+      "chunk:   0%|          | 0/39712 [00:00<?, ?it/s, now=None]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MoviePy - Writing audio in data/30min_meditation_theta.mp3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                      "
      ]
     },
     {
@@ -528,26 +431,33 @@
      "text": [
       "MoviePy - Done.\n",
       "Export Completed !\n",
-      "CPU times: user 954 ms, sys: 107 ms, total: 1.06 s\n",
-      "Wall time: 2.58 s\n"
+      "CPU times: user 11min 59s, sys: 20.7 s, total: 12min 20s\n",
+      "Wall time: 12min 13s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r"
      ]
     }
    ],
    "source": [
     "#meditation_theta\n",
-    "%time wave_extraction(106, 111,\"data/meditation_theta.mp3\", 30)"
+    "%time wave_extraction(106, 111,\"data/30min_meditation_theta.mp3\", 1800)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "chunk:   0%|          | 0/677 [00:00<?, ?it/s, now=None]        "
+      "                                                       \r"
      ]
     },
     {
@@ -555,15 +465,29 @@
      "output_type": "stream",
      "text": [
       "MoviePy - Writing audio in data/temp.wav\n",
-      "MoviePy - Done.\n",
-      "MoviePy - Writing audio in data/meditation_calming_synchronization.mp3\n"
+      "MoviePy - Done.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                   "
+      "\r",
+      "chunk:   0%|          | 0/39691 [00:00<?, ?it/s, now=None]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MoviePy - Writing audio in data/30min_meditation_calming_synchronization.mp3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                      "
      ]
     },
     {
@@ -572,8 +496,8 @@
      "text": [
       "MoviePy - Done.\n",
       "Export Completed !\n",
-      "CPU times: user 950 ms, sys: 122 ms, total: 1.07 s\n",
-      "Wall time: 2.63 s\n"
+      "CPU times: user 12min 8s, sys: 21.4 s, total: 12min 29s\n",
+      "Wall time: 12min 31s\n"
      ]
     },
     {
@@ -586,7 +510,7 @@
    ],
    "source": [
     "#meditation_calming_synchronization\n",
-    "%time wave_extraction(117, 121,\"data/meditation_calming_synchronization.mp3\", 30)"
+    "%time wave_extraction(117, 121,\"data/30min_meditation_calming_synchronization.mp3\", 1800)"
    ]
   },
   {
@@ -594,7 +518,100 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#emptyclip\n",
+    "emptyclip = AudioFileClip('data/5-minutes-of-silence.mp3')\n",
+    "emptyclip.write_audiofile('data/5min_empty.mp3')\n",
+    "emptyclip.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "improved_sleep_20min = AudioFileClip('data/20min_improved_sleep.mp3')\n",
+    "emptyclip_5min = AudioFileClip('data/5min_empty.mp3')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flag_8hr = False\n",
+    "loop_clip = [improved_sleep_20min]\n",
+    "while not flag_8hr:\n",
+    "    if concatenate_audioclips(loop_clip).duration < 28800:\n",
+    "        loop_clip = loop_clip + [emptyclip_5min] + [improved_sleep_20min]\n",
+    "    else:\n",
+    "        flag_8hr = True\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28800"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_clip = concatenate_audioclips(loop_clip).subclip(0, 28800)\n",
+    "full_clip.duration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "chunk:   0%|          | 42/635041 [00:00<26:06, 405.37it/s, now=None]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MoviePy - Writing audio in data/8hr_improved_sleep.mp3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                         \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MoviePy - Done.\n",
+      "CPU times: user 11min 15s, sys: 34.9 s, total: 11min 50s\n",
+      "Wall time: 23min 6s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%time full_clip.write_audiofile('data/8hr_improved_sleep.mp3')\n",
+    "emptyclip_5min.close()\n",
+    "improved_sleep_20min.close()"
+   ]
   }
  ],
  "metadata": {
